--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </p>
                         </div>
                         <a class="text-decoration-underline text-white" title="LFTGU Lawn care Reviews" target="_blank"
-                            href="">
+                            href="https://www.facebook.com/landscapingfromthegroundupLLC/reviews">
                             (12 Rating &
                             Reviews)</a>
                     </div>
@@ -75,7 +75,7 @@
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
-                                    href="">Get
+                                    href="https://www.google.com/maps/place/Kathleen+Rd,+Lakeland,+FL+33810,+USA/@28.0993838,-82.0068839,17z/data=!3m1!4b1!4m6!3m5!1s0x88dd47013863653d:0x173c116da95c1a0!8m2!3d28.0993791!4d-82.004309!16s%2Fg%2F1tq6kwy1?entry=ttu">Get
                                     Directions
                             </span>
                             </a>
@@ -86,7 +86,7 @@
                                 alt="LFTGU Lawn care Logo"></a>
                     </div>
                     <div class="text-md-end">
-                        <a class="phone fw-500 gap-2" title="phone number" href="tel:+14049748399">
+                        <a class="phone fw-500 gap-2" title="phone number" href="tel:+18138093317">
                             <i class="fa-solid fa-phone-volume fs-24"></i>
                             +1 813-809-3317
                         </a>
@@ -134,8 +134,7 @@
                             </li>
                             <!-- Second Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Lawn Services"
-                                    href="/">Lawn Services</a>
+                                <a class="nav-link" title="Lawn Services" href="/lawn-services.html">Lawn Services</a>
                             </li>
 
                             <!-- Third Navigation -->
@@ -165,7 +164,7 @@
                             <!-- Call Now Button (visible on extra large screens, within offcanvas) -->
                             <a title="Call LFTGU Lawn care Now"
                                 class="btn btn-primary d-xl-none d-flex justify-content-center col-12 mt-4 fs-17 text-uppercase py-3"
-                                href="tel:+14049748399">
+                                href="tel:+18138093317">
                                 Call Now
                             </a>
                     </div>
@@ -184,7 +183,7 @@
                 <!-- Main Heading -->
                 <div class="d-flex justify-content-center mb-3">
                     <p class="text-white before-hero-pop px-4 py-2 rounded-pill" style="width: fit-content;">
-                        Commercial & Residential Services
+                        Best In Lakeland, FL
                     </p>
                 </div>
 
@@ -206,7 +205,7 @@
                         <!-- Call Now Button -->
                         <a title="Call Now to Learn More"
                             class="btn btn-primary rounded-1 fs-19 text-uppercase px-5 fw-600 mb-sm-0 mb-4"
-                            href="tel:+14049748399">+1 813-809-3317</a>
+                            href="tel:+18138093317">+1 813-809-3317</a>
 
                         <!-- Secondary Button -->
 
@@ -218,7 +217,7 @@
 
 
         <!-- Background Image behind hero sections -->
-        <img class="hero-img" src="/img/big-lawn.jpg" alt="Our Lawn Services">
+        <img class="hero-img" src="/img/index-main.jpg" alt="Our Lawn Services">
     </section>
 
 
@@ -285,20 +284,20 @@
                         surface, sidewalks, prep bed areas , trimming & shaping . Our team works hard to keep your lawn
                         healthy and looking its
                         best, so you can relax and enjoy your outdoor space. Trust us for great service and results
-                        you'll love. Give us a call at <br> <br><a href="tel:+14049748399"
+                        you'll love. Give us a call at <br> <br><a href="tel:+18138093317"
                             class="text-decoration-underline" title="LFTGU Lawn care Contact Info">+1 813-809-3317</a>
                         to see how we can help your lawn
                         thrive!
                     </p>
                     <a title="Call LFTGU Lawn care Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
-                        href="tel:+14049748399">
+                        href="tel:+18138093317">
                         Call Now
                     </a>
                 </div>
 
                 <!-- Img Side -->
                 <div class="img-div top-right">
-                    <img style="object-position: top;" src="/img/new-lawn.jpg" alt="Our Lawn Services">
+                    <img style="object-position: top;" src="/img/index-about.jpg" alt="Our Lawn Services">
 
                     <!-- <div class="img-data data-bottom-left">
                         <p class=" highlight">Keith Dorr</p>
@@ -326,48 +325,48 @@
                     </div>
                     <div class="img-div">
                         <div class="phone-icon">
-                            <a title="Call now for free estimate" href="tel:+14049748399"><i
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img style="transform: scaleX(-1);" src="/img/service-1.jpg" alt="Lawn Mowing">
+                        <img style="transform: scaleX(-1);" src="/img/index-main.jpg" alt="Lawn Mowing">
                     </div>
                 </div>
 
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/service-3-icon.png" alt="Tree Trimming">
+                            <img src="/img/service-2-icon.png" alt="Tree Trimming">
                         </div>
-                        <img class="bg-icon" src="/img/service-3-icon.png" alt="Tree Trimming">
+                        <img class="bg-icon" src="/img/service-2-icon.png" alt="Tree Trimming">
                         <a href="/lawn-trimming.html" title="Tree Trimming" class="service-name">
-                             Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                            Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
                         <div class="phone-icon">
-                            <a title="Call now for free estimate" href="tel:+14049748399"><i
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img src="/img/service-3.jpg" alt="Tree Trimming">
+                        <img src="/img/gardener-trimming.jpg" alt="Tree Trimming">
                     </div>
                 </div>
 
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/service-2-icon.png" alt="Mulching">
+                            <img src="/img/mulching-icon.webp" alt="Mulching">
                         </div>
-                        <img class="bg-icon" src="/img/service-2-icon.png" alt="Mulching">
+                        <img class="bg-icon" src="/img/mulching-icon.webp" alt="Mulching">
                         <a href="/lawn-mulching.html" title="Mulching Services" class="service-name">
                             Mulching <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
                         <div class="phone-icon">
-                            <a title="Call now for free estimate" href="tel:+14049748399"><i
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img src="/img/service-2.jpg" alt="Mulching">
+                        <img src="/img/mulching.jpg" alt="Mulching">
                     </div>
                 </div>
 
@@ -378,17 +377,16 @@
                             <img src="/img/service-4-icon.png" alt="Edge & Blow Hard Surface">
                         </div>
                         <img class="bg-icon" src="/img/service-4-icon.png" alt="Edge & Blow Hard Surface">
-                        <a href="/edge-blow-hard-surfaces.html" title="Edge & Blow Hard Surface"
-                            class="service-name">
+                        <a href="/edge-blow-hard-surfaces.html" title="Edge & Blow Hard Surface" class="service-name">
                             Edge & Blow Hard Surface <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
                         <div class="phone-icon">
-                            <a title="Call now for free estimate" href="tel:+14049748399"><i
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img src="/img/lawn-stripes.jpg" alt="Edge & Blow Hard Surface">
+                        <img src="/img/edge-blow.jpg" alt="Edge & Blow Hard Surface">
                     </div>
                 </div>
 
@@ -404,10 +402,10 @@
                     </div>
                     <div class="img-div">
                         <div class="phone-icon">
-                            <a title="Call now for free estimate" href="tel:+14049748399"><i
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img src="/img/big-lawn.jpg" alt="Side walks">
+                        <img src="/img/sideways.jpg" alt="Side walks">
                     </div>
                 </div>
                 <div class="service">
@@ -422,10 +420,10 @@
                     </div>
                     <div class="img-div">
                         <div class="phone-icon">
-                            <a title="Call now for free estimate" href="tel:+14049748399"><i
+                            <a title="Call now for free estimate" href="tel:+18138093317"><i
                                     class="fa-solid fa-phone-volume"></i></a>
                         </div>
-                        <img src="/img/pinestraw-in-lawn.jpg" alt="Prep bed areas">
+                        <img src="/img/prep-bed-area.jpg" alt="Prep bed areas">
                     </div>
                 </div>
             </div>
@@ -441,7 +439,7 @@
         <div class="container">
             <div class="flex">
                 <div class="img-div">
-                    <!-- <img class="main-img" style="transform: scaleX(-1);" src="/img/building-hvac.jpg" alt="Skyscraper"> -->
+                    <!-- <img class="main-img" style="transform: scaleX(-1);" src="/img/building-hvac.jpg" alt="Lawn"> -->
                     <video muted loop autoplay playsinline>
                         <source src="/img/lawn-video.mp4" type="video/mp4">
                     </video>
@@ -476,10 +474,10 @@
                     </ul>
 
                     <div class="d-flex flex-wrap gap-2">
-                        <a title="Building Automation" class="btn btn-secondary fs-19 px-4" href="/contact.html">
+                        <a title="lawn mowing" class="btn btn-secondary fs-19 px-4" href="/contact.html">
                             Schedule a Free Consultation
                         </a>
-                        <a title="HVAC Service" class="btn btn-outline-secondary border-2 fs-19 px-5"
+                        <a title="lawn Service" class="btn btn-outline-secondary border-2 fs-19 px-5"
                             href="/contact.html">
                             Contact Us
                         </a>
@@ -492,7 +490,7 @@
 
     <!-- CTA Section -->
     <section class="cta primary-overlay">
-        <img class="bg-img" style="object-position: center;" src="/img/gardener-mowing.png" alt="LFTGU Lawn care">
+        <img class="bg-img" style="object-position: center;" src="/img/index-main.jpg" alt="LFTGU Lawn care">
         <div class="container" data-aos="fade-up">
             <!-- CTA Text -->
             <h4 class="text-center lh-100 text-capitalize">Your Perfect Lawn Is A Call Away. <br>
@@ -501,7 +499,7 @@
             <!-- CTA Button -->
             <div class="d-flex justify-content-center">
                 <a title="Call LFTGU Lawn care for free estimate" class="btn btn-primary rounded-1 px-5 fs-18 mt-5"
-                    href="tel:+14049748399">Call Now</a>
+                    href="tel:+18138093317">Call Now</a>
             </div>
         </div>
     </section>
@@ -530,12 +528,12 @@
                         ss
                     </p>
                     <div class="d-flex gap-2 flex-wrap">
-                        <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600" href="tel:+14049748399">
+                        <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600" href="tel:+18138093317">
                             Call Now
                         </a>
 
                         <a title="Residential Services" class="btn btn-secondary rounded-1 px-5 fs-20 fw-600"
-                            href="/residential-lawn-services-near-austell-ga.html">
+                            href="/lawn-trimming.html">
                             Learn More
                         </a>
                     </div>
@@ -567,49 +565,49 @@
                 <!-- Cities List -->
                 <ul class="cities pb-4">
                     <li>
-                        <a title=" Lakeland, FL Lawn Services" href="/lawn-services-near-austell-ga.html">
+                        <a title=" Lakeland, FL Lawn Services" href="/">
                             Lakeland, FL
                         </a>
                     </li>
 
                     <li>
-                        <a title=" Douglassville, GA Lawn Services" href="/douglassville-lawn-services.html">
+                        <a title=" Douglassville, GA Lawn Services" href="/">
                             Douglassville, GA
                         </a>
                     </li>
 
                     <li>
-                        <a title=" Hiram, GA Lawn Services" href="/hiram-lawn-services.html">
+                        <a title=" Hiram, GA Lawn Services" href="/">
                             Hiram, GA
                         </a>
                     </li>
 
                     <li>
-                        <a title="Lithia Springs, GA Lawn Services" href="/lithia-springs-lawn-services.html">
+                        <a title="Lithia Springs, GA Lawn Services" href="/">
                             Lithia Springs, GA
                         </a>
                     </li>
 
                     <li>
-                        <a title=" Mableton, GA Lawn Services" href="/mableton-lawn-services.html">
+                        <a title=" Mableton, GA Lawn Services" href="/">
                             Mableton, GA
                         </a>
                     </li>
 
                     <li>
-                        <a title="Marietta, GA Lawn Services" href="/marietta-lawn-services.html">
+                        <a title="Marietta, GA Lawn Services" href="/">
                             Marietta, GA
                         </a>
                     </li>
 
                     <li>
-                        <a title="Powder Springs, GA Lawn Services" href="/powder-springs-lawn-services.html">
+                        <a title="Powder Springs, GA Lawn Services" href="/">
                             Powder Springs, GA
                         </a>
                     </li>
 
                     <li>
-                        <a title="Smyrna, GA Lawn Services" href="/smyrna-lawn-services.html">
+                        <a title="Smyrna, GA Lawn Services" href="/">
                             Smyrna, GA
                         </a>
                     </li>
@@ -617,7 +615,7 @@
                 </ul>
                 <!-- CTA -->
                 <div class="d-flex justify-content-center mt-4">
-                    <a title="Call Now" class="btn btn-primary px-5 fs-19" href="tel:+13027241550">Call Now</a>
+                    <a title="Call Now" class="btn btn-primary px-5 fs-19" href="tel:+18138093317">Call Now</a>
                 </div>
             </div>
         </div>
@@ -636,7 +634,7 @@
                 </p>
                 <div class="d-flex gap-2 flex-wrap mt-4">
                     <a title="LFTGU Lawn care Phone Number" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
-                        href="tel:+14049748399">
+                        href="tel:+18138093317">
                         Call Now </a>
                     <a title="LFTGU Lawn care Reviews" class="btn btn-outline-primary rounded-1 px-5 fs-20 fw-600"
                         href="">
@@ -765,7 +763,7 @@
         <div class="container">
             <div class="flex flex-row-reverse">
                 <div class="img-div">
-                    <img class="main-img" src="/img/blowing-leaf.jpeg" alt="Skyscraper">
+                    <img class="main-img" src="/img/blowing-leaf.jpg" alt="Lawn">
 
                     <div class="popup popup-2 py-2 px-4">
                         <p class="fs-18 ">
@@ -826,8 +824,7 @@
                             Lakeland, FL 30168
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
-                                target="_blank"
-                                href="">
+                                target="_blank" href="">
                                 Get Directions
                             </a>
                         </p>
@@ -870,7 +867,7 @@
                         <!-- Phone Number -->
                         <p>
                             Main: <a class="text-white" title="Main LFTGU Lawn care Phone Number"
-                                href="tel:+14049748399">
+                                href="tel:+18138093317">
                                 +1 813-809-3317</a>
                         </p>
 
