--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         </div>
                         <img class="bg-icon" src="/img/service-2-icon.png" alt="Tree Trimming">
                         <a href="/lawn-trimming.html" title="Tree Trimming" class="service-name">
-                            Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                            Bushes & Tree Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
@@ -358,7 +358,7 @@
                         </div>
                         <img class="bg-icon" src="/img/mulching-icon.webp" alt="Mulching">
                         <a href="/lawn-mulching.html" title="Mulching Services" class="service-name">
-                            Mulching <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                           Lawn Mulching <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
@@ -378,7 +378,7 @@
                         </div>
                         <img class="bg-icon" src="/img/service-4-icon.png" alt="Edge & Blow Hard Surface">
                         <a href="/edge-blow-hard-surfaces.html" title="Edge & Blow Hard Surface" class="service-name">
-                            Edge & Blow Hard Surface <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                            Edge & Blow Services <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
@@ -397,7 +397,7 @@
                         </div>
                         <img class="bg-icon" src="/img/service-5-icon.png" alt="Side walks">
                         <a href="/sidewalks.html" title="Side walks" class="service-name">
-                            Side walks <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                            Sidewalk installation  <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
@@ -415,7 +415,7 @@
                         </div>
                         <img class="bg-icon" src="/img/service-3-icon.png" alt="Prep bed areas">
                         <a href="/prep-bed-areas.html" title="Prep bed areas" class="service-name">
-                            Prep bed areas <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                            Prep bed areas service <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
